# ansible-deb-collection

./: .ansible-lint  .gitignore  .prettierrc.yml  CHANGELOG.md  README.md  galaxy.yml  license.md  lint  notes.txt  pyproject.toml  requirements.yml  tasks.py  test
meta/: runtime.yml
molecule/: lint
molecule/allow_sudo/: converge.yml  molecule.yml  verify.yml
molecule/apt-configuration/: converge.yml  verify.yml
molecule/apt_configuration/: converge.yml  molecule.yml  prepare.yml  verify.yml
molecule/bare/: converge.yml  molecule.yml  verify.yml
molecule/base/: converge.yml  molecule.yml  verify.yml
molecule/bootstrap/: converge.yml
molecule/default/: converge.yml  molecule.yml  verify.yml
molecule/full-cicd/: converge.yml  molecule.yml  prepare.yml  verify.yml
molecule/full_cicd/: converge.yml  molecule.yml  prepare.yml  verify.yml
molecule/install_applications/: converge.yml  molecule.yml  prepare.yml  verify.yml
molecule/install_fonts/: converge.yml  molecule.yml  prepare.yml  verify.yml
molecule/popularity_contest/: converge.yml  molecule.yml  prepare.yml  verify.yml
molecule/ssh/: converge.yml  molecule.yml  verify.yml
molecule/time/: converge.yml  molecule.yml  verify.yml
molecule/upgrade/: converge.yml  verify.yml
molecule/virtualbox_guest/: converge.yml  molecule.yml  verify.yml
playbooks/: facts.yml  ping.yml  reboot.yml  upgrade-full.yml  upgrade.yml
plugins/inventory/: dynamic-dns-old.py  dynamic-dns.py  node_dns_inentory.js  python_dns_inventory.py
plugins/modules/: manage_apt_key.py
roles/allow_sudo/tasks/: main.yml
roles/apt-configuration/tasks/: update.yml
roles/apt-configuration/templates/: etc-apt--sources-debian.list.j2
roles/apt_configuration/defaults/: main.yml
roles/apt_configuration/handlers/: main.yml
roles/apt_configuration/tasks/: apt-defaults.yml  apt-sources.yml  main.yml
roles/apt_configuration/templates/: etc-apt--sources-Debian.list.j2  etc-apt--sources-Ubuntu.list.j2  etc-apt--sources-ubuntu.list.j2  etc-apt-apt.conf.d--00apt-proxy.j2  etc-apt-apt.conf.d--90custom-defaults.j2  (+1 more)
roles/bare/tasks/: main.yml  (+7 more)
(+96 files in other folders)
