[tool.poetry]
name = "ansible-deb-collection"
version = "0.1.0"
description = "My collection of shared Ansible content supporting Debian & Ubuntu family distributions.  To be used in multiple playbooks and scenario's."
authors = ["Brennan Fee <brennan@github.mailbots.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
ansible = "^3.0.0"
ansible-lint = "^5.0.2"
yamllint = "^1.26.0"
black = "^20.8b1"
docker = "^4.4.4"
molecule = "^3.2.3"
molecule-docker = "^0.3.3"

[tool.black]
line-length = 120
target-version = ['py38']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
