[tool.poetry]
name = "ansible-deb-collection"
version = "0.1.0"
description = "My collection of shared Ansible content supporting Debian & Ubuntu family distributions.  To be used in multiple playbooks and scenario's."
authors = ["Brennan Fee <brennan@github.mailbots.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
ansible = "^4.0.0"
ansible-lint = "^5.0.10"
black = "^21.5b1"
molecule = "^3.3.2"
molecule-docker = "^0.3.3"
yamllint = "^1.26.1"

[tool.black]
line-length = 120
target-version = ['py38']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
